some tests with angular and express

--- a/node/public/angular.html
+++ b/node/public/angular.html
@@ -10,7 +10,7 @@
 <div class="divTable" style="width: 50%; border: 1px solid #000;">
 <div class="divTableBody">
 <div class="divTableRow">
-<div class="divTableCell">Hello</div>
+<div class="divTableCell">Hello 1</div>
 <div class="divTableCell">{{ name }}</div>
 </div>
 <div class="divTableRow">
